# SiQuery

./: README.md
src/: CMakeLists.txt
src/DB/: DB.sql
src/Display/: CMakeLists.txt  extern-functions.cpp  extern-functions.hpp  main.cpp
src/System/: CMakeLists.txt  System.cpp  System.hpp
src/System/Informe/: CMakeLists.txt
src/System/Solicitud/: CMakeLists.txt  Solicitud.hpp  SolicitudBeca.hpp  SolicitudSicue.hpp
src/System/Usuario/: Administrador.hpp  Alumno.hpp  CMakeLists.txt  Profesor.hpp  Usuario.cpp  Usuario.hpp
src/test/: test_flujo_completo.cpp  test_procesamiento.cpp  test_seleccion.cpp
